test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_target_items/src/use_lib.sw
library;

#[storage(invalid)]
#[inline(invalid)]
#[trace(invalid)]
//! Invalid inner comment.
#[test(invalid)]
#[payable(invalid)]
#[allow(invalid)]
#[deprecated(invalid)]
#[fallback(invalid)]
#[error_type(invalid)]
#[error(invalid)]
#[event]
#[indexed]
use ::ok_lib::*;